done with resume

--- a/app/assets/stylesheets/pages/_resume.scss
+++ b/app/assets/stylesheets/pages/_resume.scss
@@ -20,6 +20,11 @@
 @media (max-width: 400px) {
   .resume-hearders {
     display: block;
-
   }
+
+  #logo-videolabs {
+    height: 110px !important;
+  }
+
 }
+
