--- a/app/views/pages/publications.html.erb
+++ b/app/views/pages/publications.html.erb
@@ -8,7 +8,7 @@
   <div class="card-project mb60">
     <div class="img-mob">
       <div>
-          <%= image_tag "CSUR15.png", alt: "CSUR15", class:'img-publication'%>
+          <%= image_tag "CSUR15.png", alt: "CSUR15", class:'img-publication img-publication-mob'%>
       </div>
     </div>
     <div class="project-desc">
@@ -23,7 +23,7 @@
   <div class="card-project mb60">
     <div class="img-mob">
       <div>
-        <%= image_tag "SMI13.png", alt: "SMI13-logo", class:'img-publication', id:'SMI13-logo'%>
+        <%= image_tag "SMI13.png", alt: "SMI13-logo", class:'img-publication img-publication-mob', id:'SMI13-logo'%>
       </div>
     </div>
     <div class="project-desc">
@@ -41,7 +41,7 @@
   <div class="card-project mb60">
     <div class="img-mob">
       <div>
-        <%= image_tag "SMI12.png", alt: "SMI12-logo", class:'img-publication', id:'SMI12-logo'%>
+        <%= image_tag "SMI12.png", alt: "SMI12-logo", class:'img-publication img-publication-mob', id:'SMI12-logo'%>
       </div>
     </div>
     <div class="project-desc">
@@ -58,7 +58,7 @@
   <div class="card-project mb60">
     <div class="img-mob">
       <div>
-        <%= image_tag "CGI11.png", alt: "CGI11-logo", class:'img-publication', id:'CGI11-logo'%>
+        <%= image_tag "CGI11.png", alt: "CGI11-logo", class:'img-publication img-publication-mob', id:'CGI11-logo'%>
       </div>
     </div>
     <div class="project-desc">
@@ -73,7 +73,7 @@
   <div class="card-project mb60">
     <div class="img-mob">
       <div>
-        <%= image_tag "web3d10.png", alt: "web3d10-logo", class:'img-publication', id:'web3d10-logo'%>
+        <%= image_tag "web3d10.png", alt: "web3d10-logo", class:'img-publication img-publication-mob', id:'web3d10-logo'%>
       </div>
     </div>
     <div class="project-desc">
