--- a/app/assets/stylesheets/pages/_publications.scss
+++ b/app/assets/stylesheets/pages/_publications.scss
@@ -7,7 +7,7 @@
   border-top-left-radius: 30px;
   border-bottom-right-radius: 30px;
   transition: all 0.5s ease-out;
-  box-shadow: 0px 10px 15px 0px $light-gray;
+  box-shadow: 0px 10px 15px 0px $shadow-grey;
   object-fit: contain;
   background-color: white;
 }
@@ -41,7 +41,7 @@
 }
 
 @media (max-width: 400px) {
-  .img-publication {
+  .img-publication-mob {
     height: 200px !important;
   }
 
